Bug 1394745 - Modify the assertion to allow the QM to evict the origin in the different persistence type. r=janv